--- a/src/Coevery.Web/DeveloperTools/Coevery.DeveloperTools.csproj
+++ b/src/Coevery.Web/DeveloperTools/Coevery.DeveloperTools.csproj
@@ -176,6 +176,12 @@
     <Compile Include="CodeGeneration\Services\DynamicDefinition.cs" />
     <Compile Include="CodeGeneration\Services\IDynamicAssemblyBuilder.cs" />
     <Compile Include="EntityManagement\Drivers\EntityMetadataPartDriver.cs" />
+    <Compile Include="ListViewDesigner\Drivers\GridInfoPartDriver.cs" />
+    <Compile Include="ListViewDesigner\Handlers\GridInfoPartHandler.cs" />
+    <Compile Include="ListViewDesigner\Migrations.cs" />
+    <Compile Include="ListViewDesigner\Models\GridInfoPart.cs" />
+    <Compile Include="ListViewDesigner\Models\GridInfoPartRecord.cs" />
+    <Compile Include="ListViewDesigner\Services\IGridService.cs" />
     <Compile Include="RelationshipManagement\DynamicTypeGeneration\RelationshipDynamicTypeGenerationEventsHandler.cs" />
     <Compile Include="CodeGeneration\Services\IDynamicTypeGenerationEvents.cs" />
     <Compile Include="EntityManagement\Handlers\EntityMetadataPartHandler.cs" />
