--- a/src/Coevery.Web/DeveloperTools/Coevery.DeveloperTools.csproj
+++ b/src/Coevery.Web/DeveloperTools/Coevery.DeveloperTools.csproj
@@ -178,6 +178,7 @@
     <Compile Include="EntityManagement\Drivers\EntityMetadataPartDriver.cs" />
     <Compile Include="ListViewDesigner\Controllers\GridInfoController.cs" />
     <Compile Include="ListViewDesigner\Drivers\GridInfoPartDriver.cs" />
+    <Compile Include="ListViewDesigner\Handlers\GridInfoFieldEventsHandler.cs" />
     <Compile Include="ListViewDesigner\Handlers\GridInfoPartHandler.cs" />
     <Compile Include="ListViewDesigner\Migrations.cs" />
     <Compile Include="ListViewDesigner\Models\GridInfoPart.cs" />
@@ -193,10 +194,8 @@
     <Compile Include="EntityManagement\Routes.cs" />
     <Compile Include="EntityManagement\Services\AdminMenu.cs" />
     <Compile Include="EntityManagement\Services\ClientRouteProvider.cs" />
-    <Compile Include="EntityManagement\Services\ContentDefinitionService.cs" />
-    <Compile Include="EntityManagement\Services\ContentMetadataService.cs" />
+    <Compile Include="EntityManagement\Services\EntityMetadataService.cs" />
     <Compile Include="EntityManagement\Services\DefaultDataMigrationInterpreter.cs" />
-    <Compile Include="EntityManagement\Services\IContentDefinitionService.cs" />
     <Compile Include="EntityManagement\Services\SchemaUpdateService.cs" />
     <Compile Include="EntityManagement\ViewModels\AddFieldViewModel.cs" />
     <Compile Include="EntityManagement\ViewModels\EditFieldViewModel.cs" />
@@ -204,7 +203,6 @@
     <Compile Include="EntityManagement\ViewModels\EditPartViewModel.cs" />
     <Compile Include="EntityManagement\ViewModels\EditTypePartViewModel.cs" />
     <Compile Include="EntityManagement\ViewModels\EditTypeViewModel.cs" />
-    <Compile Include="EntityManagement\ViewModels\EntityDetailViewModel.cs" />
     <Compile Include="FormDesigner\Controllers\AdminController.cs">
       <SubType>Code</SubType>
     </Compile>
