--- a/src/Coevery.Web/Modules/Coevery.Users/Coevery.Users.csproj
+++ b/src/Coevery.Web/Modules/Coevery.Users/Coevery.Users.csproj
@@ -166,6 +166,9 @@
       <Name>Coevery.Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\LoginStatus.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
