Fix deploy error

--- a/src/Coevery.Web/DeveloperTools/Coevery.DeveloperTools.csproj
+++ b/src/Coevery.Web/DeveloperTools/Coevery.DeveloperTools.csproj
@@ -306,8 +306,8 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="CodeGeneration\CodeGenerationTemplates\PartsListViewGrid.tt" />
-    <None Include="CodeGeneration\CodeGenerationTemplates\PartsListViewActions.tt" />
+    <Content Include="CodeGeneration\CodeGenerationTemplates\PartsListViewGrid.tt" />
+    <Content Include="CodeGeneration\CodeGenerationTemplates\PartsListViewActions.tt" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
