增加删除pnotify消息提醒

--- a/src/Coevery.Web/Core/Coevery.Core.csproj
+++ b/src/Coevery.Web/Core/Coevery.Core.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Common\Routes.cs" />
     <Compile Include="Common\Services\AutoLoadResourceFilter.cs" />
     <Compile Include="Common\Services\IAutoLoadResourceRegister.cs" />
+    <Compile Include="Common\Services\JsonNotifyFilter.cs" />
     <Compile Include="Common\Services\LayoutFilter.cs" />
     <Compile Include="Common\Services\NavigationManager.cs">
       <SubType>Code</SubType>
