--- a/src/Coevery.Web/Core/Coevery.Core.csproj
+++ b/src/Coevery.Web/Core/Coevery.Core.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Common\Services\NavigationManager.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Common\Services\NullAuthorizationService.cs" />
     <Compile Include="Common\Services\SafeModeThemeSelector.cs" />
     <Compile Include="Common\Shapes\Localization\DateTimeLocalization.cs" />
     <Compile Include="Common\Utilities\LazyField.cs" />
@@ -410,6 +411,7 @@
     <Compile Include="Settings\Descriptor\ShellDescriptorManager.cs" />
     <Compile Include="Settings\Handlers\SiteSettingsPartHandler.cs" />
     <Compile Include="Settings\Metadata\ContentDefinitionQuery.cs" />
+    <Compile Include="Settings\Metadata\ContentTypeSettings.cs" />
     <Compile Include="Settings\Metadata\Handlers\ContentPartDefinitionPartHandler.cs" />
     <Compile Include="Settings\Metadata\Handlers\ContentTypeDefinitionPartHandler.cs" />
     <Compile Include="Settings\Metadata\Parts\ContentPartDefinitionPart.cs" />
