--- a/src/Coevery.Web/DeveloperTools/Coevery.DeveloperTools.csproj
+++ b/src/Coevery.Web/DeveloperTools/Coevery.DeveloperTools.csproj
@@ -178,7 +178,7 @@
     <Compile Include="CodeGeneration\Services\DynamicDefinition.cs" />
     <Compile Include="CodeGeneration\Services\IDynamicAssemblyBuilder.cs" />
     <Compile Include="EntityManagement\Handlers\ContentTypeDefinitionPartHandler.cs" />
-    <Compile Include="EntityManagement\Permissions.cs" />
+    <Compile Include="EntityManagement\StandardPermissions.cs" />
     <Compile Include="ListViewDesigner\Controllers\GridInfoController.cs" />
     <Compile Include="ListViewDesigner\Drivers\GridInfoPartDriver.cs" />
     <Compile Include="ListViewDesigner\Handlers\GridInfoFieldEventsHandler.cs" />
