--- a/src/Coevery.Web/Core/Coevery.Core.csproj
+++ b/src/Coevery.Web/Core/Coevery.Core.csproj
@@ -164,7 +164,6 @@
     <Compile Include="Forms\Shapes\PropertyItemsBehavior.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="OptionSet\Permissions.cs" />
     <Compile Include="Projections\Controllers\ProjectionController.cs" />
     <Compile Include="Projections\PropertyEditors\IContentFieldFormatter.cs" />
     <Compile Include="Projections\Providers\Properties\IContentFieldValueProvider.cs" />
@@ -414,6 +413,7 @@
     <Compile Include="Settings\Metadata\ContentTypeSettings.cs" />
     <Compile Include="Settings\Metadata\Handlers\ContentPartDefinitionPartHandler.cs" />
     <Compile Include="Settings\Metadata\Handlers\ContentTypeDefinitionPartHandler.cs" />
+    <Compile Include="Settings\Metadata\MetaDataExtensions.cs" />
     <Compile Include="Settings\Metadata\Parts\ContentPartDefinitionPart.cs" />
     <Compile Include="Settings\Metadata\Parts\ContentTypeDefinitionPart.cs" />
     <Compile Include="Settings\Migrations.cs" />
@@ -536,6 +536,53 @@
     <Content Include="Common\Scripts\jQuery\jquery.ui.widget.min.js" />
     <Content Include="Common\Scripts\jQuery\jquery.validate.js" />
     <Content Include="Common\Scripts\jQuery\jquery.validate.min.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2.min.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_ar.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_az.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_bg.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_ca.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_cs.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_da.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_de.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_el.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_es.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_et.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_eu.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_fa.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_fi.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_fr.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_gl.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_he.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_hr.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_hu.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_id.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_is.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_it.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_ja.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_ka.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_ko.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_lt.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_lv.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_mk.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_ms.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_nl.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_no.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_pl.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_pt-BR.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_pt-PT.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_ro.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_rs.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_ru.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_sk.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_sv.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_th.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_tr.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_ug-CN.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_uk.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_vi.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_zh-CN.js" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_zh-TW.js" />
     <Content Include="Common\Scripts\moment-with-langs.js" />
     <Content Include="Common\Scripts\moment-with-langs.min.js" />
     <Content Include="Common\Scripts\require.js" />
@@ -564,6 +611,11 @@
     <Content Include="Common\Styles\jQuery\jquery-ui-timepicker-addon.css" />
     <Content Include="Common\Styles\jQuery\jquery.pnotify.css" />
     <Content Include="Common\Styles\jQuery\jquery.pnotify.icons.css" />
+    <Content Include="Common\Styles\jQuery\select2\select2-bootstrap.css" />
+    <Content Include="Common\Styles\jQuery\select2\select2-spinner.gif" />
+    <Content Include="Common\Styles\jQuery\select2\select2.css" />
+    <Content Include="Common\Styles\jQuery\select2\select2.png" />
+    <Content Include="Common\Styles\jQuery\select2\select2x2.png" />
     <Content Include="Common\Styles\jQuery\ui.datepicker.css" />
     <Content Include="Common\Styles\jQuery\ui.jqgrid.css" />
     <Content Include="Common\Styles\module.css" />
@@ -953,6 +1005,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Relationships\Styles\Web.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Common\Scripts\jQuery\select2\LICENSE" />
+    <Content Include="Common\Scripts\jQuery\select2\select2_locale_en.js.template" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
