--- a/src/Coevery.Web/Modules/Coevery.Roles/Coevery.Roles.csproj
+++ b/src/Coevery.Web/Modules/Coevery.Roles/Coevery.Roles.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Models\RolesPermissionsRecord.cs" />
     <Compile Include="Models\UserRolesPartRecord.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AuthorizationEventHandler.cs" />
     <Compile Include="Services\IRoleService.cs" />
     <Compile Include="Services\RolesBasedAuthorizationService.cs" />
     <Compile Include="Services\RoleService.cs" />
