--- a/src/Coevery.Web/Coevery.Web.csproj
+++ b/src/Coevery.Web/Coevery.Web.csproj
@@ -50,6 +50,9 @@
       <HintPath>..\..\lib\autofac\Autofac.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="FubuCore">
+      <HintPath>..\..\lib\fubu\FubuCore.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\lib\aspnetmvc\Microsoft.Web.Infrastructure.dll</HintPath>
       <Private>True</Private>
